# FD-graph-experimental

./: AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: experiment_notes.md  professor_note.md  proof_notes.md
notebooks/: general_fd_decomposition_walkthrough.ipynb  normalization_tradeoffs.ipynb
src/fdkeys/: __init__.py  closure.py  decomposition.py  keys.py  model.py  storage.py  unary_graph.py  validation.py  visualization.py
tests/: test_candidate_keys.py  test_closure.py  test_counterexamples.py  test_decomposition.py  test_storage.py  test_unary_graph_special_case.py  test_validation.py  test_visualization.py
